# ls-subtitle

./: .gitignore  README.md  batch_ocr_check.py  create_test_image.py  d.py  main.py  main_refactored.py  pyproject.toml  setup.sh  test_merge_accuracy.py  verify_refactor.sh
