[project]
name = "ls-subtitle"
version = "0.1.0"
description = "Video subtitle recognition using PaddleOCR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=3.2.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = [
    "paddlepaddle-gpu>=2.6.0",
]
